--- a/app/src/css/Stat.css
+++ b/app/src/css/Stat.css
@@ -107,6 +107,7 @@
 	display:flex;
 	align-items: center;
 	justify-content: center;
+	margin:10px;
 }
 
 .cardPicture {
@@ -152,7 +153,7 @@
 
 .CardsContainer .card {
 	height:100px;
-	margin:20px;
+	margin:5px 20px;
 }
 
 .CardsContainer .elixirInfos {
