--- a/app/src/css/Stat.css
+++ b/app/src/css/Stat.css
@@ -1,15 +1,30 @@
 .item{
 	background-color: #312b41;
 	border-radius: 10px;
+	width:95%;
 	box-shadow: 2px 2px 1px #171717;
 	color: white;
-	width:50%;
 	margin:auto;
 	margin-top:20px;
 	text-align:center;
 	font-family: Supercell-magic;
 	font-size:1rem;
 }
+
+
+
+@media (min-width: 768px) {
+	.item {
+		width:80%;
+	}
+}
+
+@media (min-width: 1200px) {
+	.item {
+		width:50%;
+	}
+}
+
 .statsContent {
 	background-color: #383658;
 	padding:10px 0px;
@@ -21,6 +36,7 @@
 	justify-content:space-around;
 	align-items: center;
 	font-size: 10px;
+	margin-bottom: 20px;
 }
 .legendItem {
 	display: flex;
@@ -54,10 +70,6 @@
 	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
-}
-
-.donutChart {
-	margin-top: 20px;
 }
 
 .pseudo {
@@ -168,4 +180,15 @@
 .apexcharts-tooltip-title {
 	margin:0px;
 	color:black;
+}
+
+.return {
+	margin:0px 20px;
+	position:absolute;
+	width:30px;
+	cursor:pointer;
+}
+
+.return:hover {
+	width:28px;
 }
