--- a/app/src/css/Stat.css
+++ b/app/src/css/Stat.css
@@ -88,6 +88,7 @@
 	align-items: center;
 	flex-wrap: wrap;
 	padding:30px;
+	text-shadow: 2px 2px 0px #000000;
 }
 
 .versusContainer .pseudo {
@@ -131,28 +132,31 @@
 .card {
 	height:150px;
 	background:none;
+	border:none;
 }
 
 .elixirInfos {
 	position:absolute;
 	top:-10px;
-	left:-20px;
+	left:-10px;
 }
 
 .elixir {
-	height:50px;
+	height:30px;
 }
 .elixirValue {
 	position:absolute;
-	top:15px;
-	left:20px;
+	top:8px;
+	left:12px;
+	font-size:10px;
 	text-shadow: 2px 2px 0px #000000;
 }
 
 .cardName {
-	margin:5px;
 	font-size:12px;
 	text-shadow: 2px 2px 0px #000000;
+	width:100%;
+	text-align: center;
 }
 
 .CurrentDeckContainer {
@@ -184,6 +188,15 @@
 .apexcharts-tooltip-title {
 	margin:0px;
 	color:black;
+}
+
+.CardsContainer div{
+/*	width: calc(100%/4);*/
+	text-align: center;
+}
+
+g .apexcharts-pie-series path{
+	stroke:none;
 }
 
 .return {
