--- a/app/src/css/LandingPage.css
+++ b/app/src/css/LandingPage.css
@@ -42,6 +42,13 @@ html, body, #root, #root>div {
 	margin: 0px 3px;
 	color:#ff2b68;
 }
+.footer a{
+	color:#ff2b68;
+	text-decoration: none;
+}
+.footer a:hover{
+	color: #ff2b68
+}
 
 h1 {
 	font-family: Supercell-magic;
@@ -65,6 +72,7 @@ input[type="text"] {
 	background-color: rgba(0, 0, 0, 0.31);
 	height: 50px;
 	width: 80%;
+	text-align: center;
 }
 input[type="text"]::placeholder {
 	color: rgba(255, 255, 255, 0.13);
